cmd/billing-gateway/k8s/03-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-billing-gateway-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/billing-gateway
