cmd/billing-gateway/k8s/02-billing-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing-gateway
  template:
    metadata:
      labels:
        app: billing-gateway
    spec:
      containers:
        - name: billing-gateway
          image: uhub.service.ucloud.cn/entropypool/billing-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/BillingGateway
      volumes:
        - name: service-config
          configMap:
            name: billing-gateway-config
            items:
              - key: service-conf
                path: BillingGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: billing-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50900
      targetPort: 50900
    - name: grpc
      port: 50901
      targetPort: 50901
    - name: healthz
      port: 50902
      targetPort: 50902
    - name: prometheus
      port: 50903
      targetPort: 50903
  selector:
    app: billing-gateway
